# ccmux

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  schema.graphql
crates/cairn-core/: Cargo.toml
crates/cairn-core/src/: event.rs
crates/ccmux-app/: Cargo.toml  Dioxus.toml
crates/ccmux-app/assets/: style.css  style.scss
crates/ccmux-app/src/: api.rs  main.rs  server_fns.rs
crates/ccmux-app/src/components/: app.rs  mod.rs  session_list.rs  session_view.rs  theme_toggle.rs
crates/ccmux-app/src/components/blocks/: display_item.rs  group.rs  json_tree.rs  message.rs  mod.rs  prose.rs  task_list.rs  thinking.rs  tool_use.rs
crates/ccmux-app/src/components/blocks/tools/: agent.rs  ask_user.rs  bash.rs  mod.rs  read.rs  tool_search.rs  web_search.rs
crates/ccmux-core/: Cargo.toml
crates/ccmux-core/src/: lib.rs
crates/ccmux-core/src/display/: format.rs  highlight.rs  markdown.rs  mod.rs  pipeline.rs  streaming.rs
crates/ccmux-core/src/events/: parse.rs
crates/ccmux-core/src/session/: loader.rs  mod.rs
crates/ccmux-index/src/: indexer.rs  lib.rs  query.rs
crates/ccmux-index/tests/: index_test.rs
docs/superpowers/plans/: 2026-03-11-dioxus-migration.md
docs/superpowers/specs/: 2026-03-11-dioxus-migration-design.md  2026-03-12-post-migration-fixup-design.md  2026-03-14-markdown-session-view-design.md  2026-03-26-session-indexing-search-design.md
research/: claude-code-jsonl-format.md
research/event-log-formats/: claude-code.md  codex-cli.md  gemini-cli.md  prompt.md
research/streaming-protocols/: claude-code.md  codex-cli.md  gemini-cli.md  prompt.md
src/: main.rs
src/graphql/: mod.rs  query.rs  types.rs
src/session/: loader.rs  types.rs
web/: .gitignore  codegen.ts  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.module.css  App.svelte  App.tsx  app.css  main.tsx
web/src/components/: Prose.module.css  Prose.tsx  RawLogView.module.css  RawLogView.svelte  RawLogView.tsx  SessionList.module.css  SessionList.svelte  SessionList.tsx  SessionView.module.css  SessionView.svelte  SessionView.tsx  ThemeToggle.module.css  ThemeToggle.svelte  ThemeToggle.tsx  session-context.ts
web/src/components/blocks/: AgentBlockView.module.css  AgentBlockView.tsx  AskQuestionBlockView.tsx  AskUserQuestionView.module.css  AskUserQuestionView.tsx  AssistantMessageView.tsx  BashBlockView.module.css  BashBlockView.tsx  CollapsibleBlock.module.css  CollapsibleBlock.tsx  ContentBlockView.tsx  DisplayItemView.tsx  EditBlockView.module.css  EditBlockView.tsx  ExitPlanModeView.module.css  ExitPlanModeView.tsx  GrepBlockView.tsx  HighlightedBash.tsx  InternalGroupView.tsx  MessageBlock.module.css  MessageBlock.tsx  MessageMeta.module.css  MessageMeta.tsx  ReadBlockView.tsx  SystemMessageView.tsx  TaskListView.module.css  TaskListView.tsx  ThinkingBlockView.module.css  ThinkingBlockView.tsx  ToolUseBlockView.module.css  ToolUseBlockView.tsx  UserMessageView.tsx  WriteBlockView.tsx
web/src/lib/: display-item.ts  format.ts  graphql.ts  highlight.ts  json-tree.tsx  session.ts  types.ts
