[package]
name = "ccmux-app"
version = "0.1.0"
edition = "2024"

[dependencies]
ccmux-core = { path = "../ccmux-core" }
dioxus = { version = "0.7", features = ["fullstack", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.12"
futures = "0.3"
notify = "7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = ["dioxus/server"]
